<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/main_background"
    tools:context=".activities.IntroActivity">

    <!--Oscurecer un poco la imagen de fondo-->
    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:alpha="0.6"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGO APP"
            android:textSize="40sp"
            android:layout_marginTop="100dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/share_with_friends_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_app_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:layout_marginRight="50dp"
            android:textColor="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="25dp">


            <Button
                android:id="@+id/btnGoCreateAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/RaisedButtonYellow"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/create_account_text"/>

            <Button
                android:id="@+id/btnGoIHaveAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButtonYellow"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/have_account_text"/>

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>