<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageViewCard"
            android:src="@mipmap/add_btn"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />

        <TextView
            android:id="@+id/textViewTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_post_text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/textViewUsernameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_user_text"
            android:textStyle="italic"
            android:textColor="@color/colorLightBrown"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            />

        <TextView
            android:id="@+id/textViewDescriptionCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_description_text"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e9e8e8"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButtonLikeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/like_gray"
                android:padding="15dp"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/textViewLikesNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="15dp"
                android:text="@string/like_text"/>

        </RelativeLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>